<resources>
    <string name="app_name">Newsper</string>
    <string name="about">About</string>
    <string name="title">Title News</string>
    <string name="publish_date">Publish Date News</string>
    <string name="description">Description News</string>
    <string name="name">Gerry Satria Halim</string>
    <string name="email">gerrysatria10@gmail.com</string>
    <string name="detail_title">Title News</string>
    <string name="detail_publish_date">Publish Date News</string>
    <string name="detail_description">Description News</string>
    <string name="source">Source News</string>
    <string name="share">Share</string>
    <string-array name="title_news">
        <item>Nadiem Makarim Keluarkan Aturan Baru yang Membuat Mahasiswa Tidak Wajib Bikin Skripsi</item>
        <item>Polusi Jakarta Jadi Sorotan, Peran EBT Harus Ditingkatkan</item>
        <item>Begini Cara Mengurus Surat Tilang Pengendara yang Tidak Lolos Uji Emisi</item>
        <item>Ada Balapan Unik di Bandung: Pakai Peti Sabun!</item>
        <item>Gerai McDonald\'s Ini Berkonsep Era 1980 yang Penuh Nostalgia</item>
        <item>Muncul Varian Pirola Paling Bermutasi, Kasus COVID-19 Bisa \'Ngegas\' Lagi?</item>
        <item>X Twitter Bakal Bisa Digunakan untuk Video Call dan Telepon</item>
        <item>Kominfo Siapkan Pedoman Etika AI untuk Lindungi Data Pribadi</item>
        <item>Publikasi Industri atau Industri Publikasi?</item>
        <item>Topan Saola Terjang Guangdong setelah Hantam Hong Kong dan Makau</item>
        <item>Sukses Daratkan Chandrayaan ke Bulan, India Kirim Aditya Pelajari Matahari</item>
        <item>Mengenal Tanaman Bunga Tabebuya Bukan Sekadar untuk Keindahan</item>
    </string-array>
    <string-array name="photo_news">
        <item>@drawable/nadiem_makarim</item>
        <item>@drawable/polusi_jakarta</item>
        <item>@drawable/uji_coba_tilang</item>
        <item>@drawable/lomba_kereta</item>
        <item>@drawable/mcdonalds</item>
        <item>@drawable/virus</item>
        <item>@drawable/twitter</item>
        <item>@drawable/ai</item>
        <item>@drawable/publikasi_industri</item>
        <item>@drawable/topan</item>
        <item>@drawable/chandrayaan</item>
        <item>@drawable/tabebuya</item>
    </string-array>
    <string-array name="publish_date_news">
        <item>29 Agustus 2023</item>
        <item>02 September 2023</item>
        <item>01 September 2023</item>
        <item>28 Agustus 2023</item>
        <item>01 September 2023</item>
        <item>01 September 2023</item>
        <item>01 September 2023</item>
        <item>30 Agustus 2023</item>
        <item>30 Agustus 2023</item>
        <item>02 September 2023</item>
        <item>02 September 2023</item>
        <item>27 Agustus 2023</item>
    </string-array>
</resources>