<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailNewsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_detail_news"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_title"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_news"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/detail_title" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_publish_date"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/detail_publish_date" />

        <TextView
            style="@style/TextContent.MarginAll"
            android:id="@+id/tv_description"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_publish_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/detail_description" />

        <TextView
            style="@style/TextContent.MarginAll"
            android:id="@+id/tv_source"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/source" />

        <Button
            style="@style/TextContent.MarginAll"
            android:id="@+id/action_share"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@+id/tv_source"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>