<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_photo_item"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_item_title"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="8dp"
            android:maxLines="1"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_item"
            card_view:layout_constraintTop_toTopOf="@id/img_photo_item"
            tools:text="@string/title"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_item_publish_date"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="8dp"
            android:textSize="10sp"
            android:textStyle="italic"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_item"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_title"
            tools:text="@string/publish_date"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="8dp"
            android:textSize="11sp"
            android:maxLines="3"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_item"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_publish_date"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_photo_item"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>